Return unique path values from listByPrefix